Better Toast Added with some Icon update

--- a/public/allApps.json
+++ b/public/allApps.json
@@ -144,7 +144,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/kc7Cqkj5/Google-Drive-Logo.png",
+    "image": "https://i.postimg.cc/ht53DYcj/google-drive.jpg",
     "title": "Google Drive",
     "companyName": "Google LLC",
     "id": 9,
@@ -162,7 +162,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/Vg3P7ytG/Canva-Logo.png",
+    "image": "https://i.postimg.cc/sxxhgT3K/Icons-Lilac-Redes-Sociales.jpg",
     "title": "Canva",
     "companyName": "Canva Pty Ltd.",
     "id": 10,
@@ -180,7 +180,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/Rc8qD12/Genshin-Impact-Logo.jpg",
+    "image": "https://i.postimg.cc/L8YG1Syd/Genshin-Impact-app-icon.jpg",
     "title": "Genshin Impact",
     "companyName": "HoYoverse",
     "id": 11,
@@ -198,7 +198,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/6RRn98rG/Microsoft-Teams-Logo.png",
+    "image": "https://i.postimg.cc/tTxMsN2Q/Microsoft-One-Drive-on-the-App-Store.jpg",
     "title": "Microsoft Teams",
     "companyName": "Microsoft Corporation",
     "id": 12,
@@ -216,7 +216,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/hmK45mD0/Google-Maps-Logo.png",
+    "image": "https://i.postimg.cc/KzG1z0ZX/Google-Maps-Old-Cute-Color-icon-in-PNG-SVG.jpg",
     "title": "Google Maps",
     "companyName": "Google LLC",
     "id": 13,
@@ -234,7 +234,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/tZ4c3Zjq/Clash-of-Clans-Logo.jpg",
+    "image": "https://i.postimg.cc/VLQd0ss3/Clash-of-Clans-Logo.jpg",
     "title": "Clash of Clans",
     "companyName": "Supercell",
     "id": 14,
@@ -252,7 +252,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/y5p9G8G0/Zoom-Logo.png",
+    "image": "https://i.postimg.cc/cJgScYXX/Zoom-icon-in-Cloud-Style.jpg",
     "title": "Zoom",
     "companyName": "Zoom Video Communications",
     "id": 15,
@@ -270,7 +270,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/bX2Y6FJn/Amazon-Logo.png",
+    "image": "https://i.postimg.cc/XJkDKYSX/download-4.jpg",
     "title": "Amazon",
     "companyName": "Amazon.com, Inc.",
     "id": 16,
@@ -288,7 +288,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/z3p2zKLn/Snapchat-Logo.png",
+    "image": "https://i.postimg.cc/vHc3TzBc/Download-Snapchat-logo-png-Snapchat-icon-transparent-png.jpg",
     "title": "Snapchat",
     "companyName": "Snap Inc.",
     "id": 17,
@@ -306,7 +306,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/N2JQbk4m/Adobe-Photoshop-Logo.png",
+    "image": "https://i.postimg.cc/7hTJ8fHQ/Download-adobe-photoshop-logo-transparent-background.jpg",
     "title": "Adobe Photoshop",
     "companyName": "Adobe Inc.",
     "id": 18,
@@ -324,7 +324,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/M1S7tHqv/Google-Photos-Logo.png",
+    "image": "https://i.postimg.cc/Vv5pYPpH/Google-Calendar-logo-PNG-and-vector-files-svg-eps-Brandlogos-net.jpg",
     "title": "Google Photos",
     "companyName": "Google LLC",
     "id": 19,
@@ -342,7 +342,7 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/4VvDpz7k/Linkedin-Logo.png",
+    "image": "https://i.postimg.cc/DZh7y0Pc/Linked-In-icon-in-i-OS-Style.jpg",
     "title": "LinkedIn",
     "companyName": "LinkedIn Corporation",
     "id": 20,
